--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="style.css" />
     <title>Gina Tran</title>
   </head>
@@ -22,6 +22,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Skills</a></li>
+        <li><a href="#">Experiences</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Resume</a></li>
         <li><a href="#">Contact</a></li>
@@ -38,7 +39,7 @@
           I'm <span>Gina Tran<br /></span>
         </h1>
         <p class="description">
-          Passionate full-stack developer, researcher, and product manager with a strong drive to create impactful,
+          Passionate full-stack developer and researcher with a strong drive to create impactful,
           innovative solutions that inspire meaningful change.
         </p>
         <div class="social-icons">
@@ -84,6 +85,16 @@
           <p>Project Management</p>
         </div>
       </div>
+        <div class="section__hobbies">
+            <h2>Hobbies & Interests</h2>
+            <p>In my free time I enjoy</p>
+                <div class="mini_hobbies">
+                    <p>Coffee Brewing <i class="fa fa-coffee"></i></p>
+                    <p>Reading <i class="fa fa-book"></i></p>
+                    <p>Hiking <i class="fa fa-hiking"></i></p>
+                    <p>Cooking <i class="fas fa-utensils"></i></p>
+                </div>
+        </div>
     </div>
   </section>
 
@@ -95,20 +106,101 @@
         I have experience working with a range of programming languages, creating data visualizations,
         and applying project management platforms to deliver impactful solutions.
       </p>
-      <div class="container__skills">
-        <h3>Full Stack Development</h3>
-        <div class="mini__skills">
-          <p>Python</p>
-          <p>SQL</p>
-          <p>JavaScript</p>
-          <p>HTML/CSS</p>
-          <p>React</p>
-          <p>Firebase</p>
-          <p>Git</p>
-          <p>GitHub</p>
+    <div class="skills__wrapper">
+    <!-- Front-End -->
+    <div class="front__skills">
+        <h3>Front-End Development</h3>
+        <div class="f__skills">
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JavaScript</p>
+        <p>React</p>
+        <p>Figma</p>
+        <p>Canva</p>
+        <p>Articulate 360</p>
         </div>
-      </div>
+    </div>
+
+    <!-- Back-End -->
+    <div class="back__skills">
+        <h3>Back-End Development</h3>
+        <div class="b__skills">
+        <p>Python</p>
+        <p>SQL</p>
+        <p>R</p>
+        <p>Firebase</p>
+        <p>Git</p>
+        <p>GitHub</p>
+        <p>PostgreSQL</p>
+        <p>Microsoft SQL Server</p>
+        <p>MySQL</p>
+        <p>Oracle</p>
+        </div>
+    </div>
+
+    <!-- Data & Analytics -->
+    <div class="data__skills">
+        <h3>Data & Analytics</h3>
+        <div class="v__skills">
+        <p>Tableau</p>
+        <p>Google Analytics</p>
+        <p>Excel</p>
+        <p>Azure DevOps</p>
+        </div>
+    </div>
     </div>
   </section>
+    <section class="section" id="Experiences">
+    <div class="section_experiences">
+        <h1>Experiences</h1>
+
+        <!-- Research Analyst -->
+        <div class="row experience">
+        <div class="research_left">
+            <img src="images/pup.jpg" alt="pup">
+            <h2>Research Analyst</h2>
+            <h4>University of Washington - Pup Support</h4>
+            <h4>November 2023 - June 2025</h4>
+        </div>
+        <div class="research_right">
+            <p>I improved campaign effectiveness by analyzing survey data and conducting secondary research to refine mental health awareness efforts. By translating 
+            research insights into engaging Instagram posts and structured data reports, I strengthened outreach targeting, which drove measurable growth in learner 
+            engagement. Additionally, I advanced stigma-reduction initiatives by presenting actionable data visualizations and insights to over 50 stakeholders, 
+            helping to inform and shape ongoing mental health programs.</p>
+        </div>
+        </div>
+
+        <!-- Data Research Assistant -->
+        <div class="row experience">
+        <div class="data_left">
+            <img src="images/paul.png" alt="paul">
+            <h2>Data Research Assistant</h2>
+            <h4>Paul G. Allen School of Computer Science & Engineering</h4>
+            <h4>October 2024 - February 2025</h4>
+        </div>
+        <div class="data_right">
+            <p>By redesigning an introductory Python course with data-driven assessments such as quizzes, coding interviews, and exit tickets, 
+            student performance increased by 15%. The purpose of this research was to create more accessibility and diverse learning opportunities
+            instead of relying on one standard curriculum...</p>
+        </div>
+        </div>
+
+        <!-- Product Analyst Intern -->
+        <div class="row experience">
+        <div class="product_left">
+            <img src="images/enrte.png" alt="entre">
+            <h2>Product Analyst Intern</h2>
+            <h4>Entrepreneurs of Tomorrow</h4>
+            <h4>September 2024 - February 2025</h4>
+        </div>
+        <div class="product_right">
+            <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional 
+            skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+        </div>
+        </div>
+    </div>
+    </section>
+  </section>
+
 </body>
 </html>
