--- a/index.html
+++ b/index.html
@@ -193,12 +193,62 @@
             <h4>Entrepreneurs of Tomorrow</h4>
             <h4>September 2024 - February 2025</h4>
         </div>
-        <div class="product_right">
-            <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional 
-            skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
-        </div>
+          <div class="product_right">
+              <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional 
+              skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+          </div>
         </div>
     </div>
+    </section>
+
+    <!--Portfolio-->
+    <section class="section" id="Portfolio">
+      <div class="section__portfolio">
+        <h1>Portfolio</h1>
+        <div class="portfolio">
+          <div class="project__1">
+            <img src="images\ember.png" alt="ember">
+            <h3>EmberGuard</h3>
+            <p>Built a secure and user-friendly app using JavaScript, HTML/CSS, and Python to provide marginalized communities with reliable 
+              wildfire information, managing development, Google authentication, deployment, and overall design.
+            </p>
+            <button class="button__1">Click to See</button>
+          </div>
+          <div class="project__2">
+            <img src="images\bot.png" alt ="bot">
+            <h3>LinkedIn Integrity</h3>
+            <p>Developed a Python-based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance 
+              transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.
+            </p>
+            <button class="button__1">Click to See</button>
+          </div>
+          <div class="project__3">
+            <img src="images\animal_shelter.jpg" alt="bot">
+            <h3>Seattle Animal Shelter</h3>
+            <p>I used SQL and data modeling to build data pipelines and design a relational database that tracked adopters, breeds, and locations,
+              which improved outreach efficiency, cut inquiry times, and revealed adoption trends across different zip codes.
+            </p>
+            <button class="button__1">Click to See</button>
+          </div>
+          <div class="bottom-row">
+            <div class="project__4">
+              <img src="images\scrapbook.jpg" alt="scrap">
+              <h3>My Scrapbook</h3>
+              <p>In this project I designed a scrapbook layout to upload pictures on a post it note design using JavaScript, HTML, and CSS
+              </p>
+              <button class="button__1">Click to See</button>
+            </div>
+            <div class="project__5">
+              <img src="images\car.jpg" alt="car">
+              <h3>Seattle Collisions</h3>
+              <p>Using Tableu Public I created multi-page dashboards visualizations to highlight accident hotspots, maps, 
+                and collision type breakdowns
+              </p>
+              <button class="button__1">Click to See</button>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </section>
 
