--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css" />
-    <title>Gina Tran</title>
-  </head>
-  <body>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="style.css" />
+  <title>Gina Tran</title>
+  <link rel="icon" href="images/logo.png">
+</head>
+<body>
   <!-- Navigation -->
-  <nav>
-    <div class="nav__content">
-      <div class="logo"><a href="#">Gina</a></div>
-      <label for="check" class="checkbox">
-        <i class="ri-menu-line"></i>
-      </label>
-      <input type="checkbox" name="check" id="check" />
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
-        <li><a href="#">Experiences</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Resume</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+   
+<nav>
+  <div class="nav__content">
+    <div class="logo"><a href="#">Gina</a></div>
+    <input type="checkbox" name="check" id="check" />
+    <label for="check" class="checkbox">
+      <i class="ri-menu-line"></i>
+    </label>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#experiences">Experiences</a></li>
+      <li><a href="#portfolio">Portfolio</a></li>
+    </ul>
+  </div>
+</nav>
+
 
   <!-- Main Section -->
   <section class="section" id="home">
@@ -43,15 +44,9 @@
           innovative solutions that inspire meaningful change.
         </p>
         <div class="social-icons">
-          <a href="https://github.com/ginaxtran" target="_blank">
-            <i class="fab fa-github"></i>
-          </a>
-          <a href="mailto:ginatran321@gmail.com">
-            <i class="fas fa-envelope"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/gina-tran123/" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+          <a href="https://github.com/ginaxtran" target="_blank"><i class="fab fa-github"></i></a>
+          <a href="mailto:ginatran321@gmail.com"><i class="fas fa-envelope"></i></a>
+          <a href="https://www.linkedin.com/in/gina-tran123/" target="_blank"><i class="fab fa-linkedin"></i></a>
         </div>
       </div>
       <div class="image">
@@ -85,16 +80,16 @@
           <p>Project Management</p>
         </div>
       </div>
-        <div class="section__hobbies">
-            <h2>Hobbies & Interests</h2>
-            <p>In my free time I enjoy</p>
-                <div class="mini_hobbies">
-                    <p>Coffee Brewing <i class="fa fa-coffee"></i></p>
-                    <p>Reading <i class="fa fa-book"></i></p>
-                    <p>Hiking <i class="fa fa-hiking"></i></p>
-                    <p>Cooking <i class="fas fa-utensils"></i></p>
-                </div>
+      <div class="section__hobbies">
+        <h2>Hobbies & Interests</h2>
+        <p>In my free time I enjoy</p>
+        <div class="mini_hobbies">
+          <p>Coffee Brewing <i class="fa fa-coffee"></i></p>
+          <p>Reading <i class="fa fa-book"></i></p>
+          <p>Hiking <i class="fa fa-hiking"></i></p>
+          <p>Cooking <i class="fas fa-utensils"></i></p>
         </div>
+      </div>
     </div>
   </section>
 
@@ -106,151 +101,142 @@
         I have experience working with a range of programming languages, creating data visualizations,
         and applying project management platforms to deliver impactful solutions.
       </p>
-    <div class="skills__wrapper">
-    <!-- Front-End -->
-    <div class="front__skills">
-        <h3>Front-End Development</h3>
-        <div class="f__skills">
-        <p>HTML</p>
-        <p>CSS</p>
-        <p>JavaScript</p>
-        <p>React</p>
-        <p>Figma</p>
-        <p>Canva</p>
-        <p>Articulate 360</p>
-        </div>
-    </div>
-
-    <!-- Back-End -->
-    <div class="back__skills">
-        <h3>Back-End Development</h3>
-        <div class="b__skills">
-        <p>Python</p>
-        <p>SQL</p>
-        <p>R</p>
-        <p>Firebase</p>
-        <p>Git</p>
-        <p>GitHub</p>
-        <p>PostgreSQL</p>
-        <p>Microsoft SQL Server</p>
-        <p>MySQL</p>
-        <p>Oracle</p>
-        </div>
-    </div>
-
-    <!-- Data & Analytics -->
-    <div class="data__skills">
-        <h3>Data & Analytics</h3>
-        <div class="v__skills">
-        <p>Tableau</p>
-        <p>Google Analytics</p>
-        <p>Excel</p>
-        <p>Azure DevOps</p>
-        </div>
-    </div>
-    </div>
-  </section>
-    <section class="section" id="Experiences">
-    <div class="section_experiences">
-        <h1>Experiences</h1>
-
-        <!-- Research Analyst -->
-        <div class="row experience">
-        <div class="research_left">
-            <img src="images/pup.jpg" alt="pup">
-            <h2>Research Analyst</h2>
-            <h4>University of Washington - Pup Support</h4>
-            <h4>November 2023 - June 2025</h4>
-        </div>
-        <div class="research_right">
-            <p>I improved campaign effectiveness by analyzing survey data and conducting secondary research to refine mental health awareness efforts. By translating 
-            research insights into engaging Instagram posts and structured data reports, I strengthened outreach targeting, which drove measurable growth in learner 
-            engagement. Additionally, I advanced stigma-reduction initiatives by presenting actionable data visualizations and insights to over 50 stakeholders, 
-            helping to inform and shape ongoing mental health programs.</p>
-        </div>
-        </div>
-
-        <!-- Data Research Assistant -->
-        <div class="row experience">
-        <div class="data_left">
-            <img src="images/paul.png" alt="paul">
-            <h2>Data Research Assistant</h2>
-            <h4>Paul G. Allen School of Computer Science & Engineering</h4>
-            <h4>October 2024 - February 2025</h4>
-        </div>
-        <div class="data_right">
-            <p>By redesigning an introductory Python course with data-driven assessments such as quizzes, coding interviews, and exit tickets, 
-            student performance increased by 15%. The purpose of this research was to create more accessibility and diverse learning opportunities
-            instead of relying on one standard curriculum...</p>
-        </div>
-        </div>
-
-        <!-- Product Analyst Intern -->
-        <div class="row experience">
-        <div class="product_left">
-            <img src="images/enrte.png" alt="entre">
-            <h2>Product Analyst Intern</h2>
-            <h4>Entrepreneurs of Tomorrow</h4>
-            <h4>September 2024 - February 2025</h4>
-        </div>
-          <div class="product_right">
-              <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional 
-              skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+      <div class="skills__wrapper">
+        <!-- Front-End -->
+        <div class="front__skills">
+          <h3>Front-End Development</h3>
+          <div class="f__skills">
+            <p>HTML</p>
+            <p>CSS</p>
+            <p>JavaScript</p>
+            <p>React</p>
+            <p>Figma</p>
+            <p>Canva</p>
+            <p>Articulate 360</p>
           </div>
         </div>
-    </div>
-    </section>
-
-    <!--Portfolio-->
-    <section class="section" id="Portfolio">
-      <div class="section__portfolio">
-        <h1>Portfolio</h1>
-        <div class="portfolio">
-          <div class="project__1">
-            <img src="images\ember.png" alt="ember">
-            <h3>EmberGuard</h3>
-            <p>Built a secure and user-friendly app using JavaScript, HTML/CSS, and Python to provide marginalized communities with reliable 
-              wildfire information, managing development, Google authentication, deployment, and overall design.
-            </p>
-            <button class="button__1">Click to See</button>
+        <!-- Back-End -->
+        <div class="back__skills">
+          <h3>Back-End Development</h3>
+          <div class="b__skills">
+            <p>Python</p>
+            <p>SQL</p>
+            <p>R</p>
+            <p>Firebase</p>
+            <p>Git</p>
+            <p>GitHub</p>
+            <p>PostgreSQL</p>
+            <p>Microsoft SQL Server</p>
+            <p>MySQL</p>
+            <p>Oracle</p>
           </div>
-          <div class="project__2">
-            <img src="images\bot.png" alt ="bot">
-            <h3>LinkedIn Integrity</h3>
-            <p>Developed a Python-based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance 
-              transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.
-            </p>
-            <button class="button__1">Click to See</button>
-          </div>
-          <div class="project__3">
-            <img src="images\animal_shelter.jpg" alt="bot">
-            <h3>Seattle Animal Shelter</h3>
-            <p>I used SQL and data modeling to build data pipelines and design a relational database that tracked adopters, breeds, and locations,
-              which improved outreach efficiency, cut inquiry times, and revealed adoption trends across different zip codes.
-            </p>
-            <button class="button__1">Click to See</button>
-          </div>
-          <div class="bottom-row">
-            <div class="project__4">
-              <img src="images\scrapbook.jpg" alt="scrap">
-              <h3>My Scrapbook</h3>
-              <p>In this project I designed a scrapbook layout to upload pictures on a post it note design using JavaScript, HTML, and CSS
-              </p>
-              <button class="button__1">Click to See</button>
-            </div>
-            <div class="project__5">
-              <img src="images\car.jpg" alt="car">
-              <h3>Seattle Collisions</h3>
-              <p>Using Tableu Public I created multi-page dashboards visualizations to highlight accident hotspots, maps, 
-                and collision type breakdowns
-              </p>
-              <button class="button__1">Click to See</button>
-            </div>
+        </div>
+        <!-- Data & Analytics -->
+        <div class="data__skills">
+          <h3>Data & Analytics</h3>
+          <div class="v__skills">
+            <p>Tableau</p>
+            <p>Google Analytics</p>
+            <p>Excel</p>
+            <p>Azure DevOps</p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
   </section>
 
+  <!-- Experiences Section -->
+  <section class="section" id="experiences">
+    <div class="section_experiences">
+      <h1>Experiences</h1>
+      <!-- Research Analyst -->
+      <div class="row experience">
+        <div class="research_left">
+          <img src="images/pup.jpg" alt="pup">
+          <h2>Research Analyst</h2>
+          <h4>University of Washington - Pup Support</h4>
+          <h4>November 2023 - June 2025</h4>
+        </div>
+        <div class="research_right">
+          <p>I improved campaign effectiveness by analyzing survey data and conducting secondary research to refine mental health awareness efforts. By translating research insights into engaging Instagram posts and structured data reports, I strengthened outreach targeting, which drove measurable growth in learner engagement. Additionally, I advanced stigma-reduction initiatives by presenting actionable data visualizations and insights to over 50 stakeholders, helping to inform and shape ongoing mental health programs.</p>
+        </div>
+      </div>
+      <!-- Data Research Assistant -->
+      <div class="row experience">
+        <div class="data_left">
+          <img src="images/paul.png" alt="paul">
+          <h2>Data Research Assistant</h2>
+          <h4>Paul G. Allen School of Computer Science & Engineering</h4>
+          <h4>October 2024 - February 2025</h4>
+        </div>
+        <div class="data_right">
+          <p>By redesigning an introductory Python course with data-driven assessments such as quizzes, coding interviews, and exit tickets, 
+          student performance increased by 15%. The purpose of this research was to create more accessibility and diverse learning opportunities instead of relying on one standard curriculum...</p>
+        </div>
+      </div>
+      <!-- Product Analyst Intern -->
+      <div class="row experience">
+        <div class="product_left">
+          <img src="images/enrte.png" alt="entre">
+          <h2>Product Analyst Intern</h2>
+          <h4>Entrepreneurs of Tomorrow</h4>
+          <h4>September 2024 - February 2025</h4>
+        </div>
+        <div class="product_right">
+          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Portfolio Section -->
+  <section class="section" id="portfolio">
+    <div class="section__portfolio">
+      <h1>Portfolio</h1>
+      <div class="__portfolio">
+        <div class="project">
+          <img src="images/ember.png" alt="ember">
+          <h3>EmberGuard</h3>
+          <p>Built a secure and user-friendly app using JavaScript, HTML/CSS, and Python to provide marginalized communities with reliable wildfire information, managing development, Google authentication, deployment, and overall design.</p>
+          <a href="https://github.com/ginaxtran/EmberGuard" target="_blank">
+            <button class="button">Click to See</button>
+          </a>
+        </div>
+          <div class="project">
+            <img src="images/bot.png" alt="bot">
+            <h3>LinkedIn Integrity</h3>
+            <p>Developed a Python-based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.</p>
+            <a href="https://github.com/ginaxtran/Linked-In-Bots" target="_blank">
+              <button class="button">Click to See</button>
+            </a>
+          </div>
+          <div class="project">
+            <img src="images/animal_shelter.png" alt="animal">
+            <h3>Seattle Animal Shelter</h3>
+            <p>I used SQL and data modeling to build data pipelines and design a relational database that tracked adopters, breeds, and locations, which improved outreach efficiency, cut inquiry times, and revealed adoption trends across different zip codes.</p>
+            <a href="https://github.com/ginaxtran/animal-shelter" target="_blank">
+              <button class="button">Click to See</button>
+            </a>
+          </div>
+          <div class="project">
+            <img src="images/scrapbook.png" alt="scrap">
+            <h3>My Scrapbook</h3>
+            <p>In this project I designed a scrapbook layout to upload pictures on a post it note design using JavaScript, HTML, and CSS.</p>
+            <a href="https://github.com/INFO442-25WI-B/Girly_pop" target="_blank">
+              <button class="button">Click to See</button>
+            </a>
+          </div>
+          <div class="project">
+            <img src="images/collision.png" alt="car">
+            <h3>Seattle Collisions</h3>
+            <p>Using Tableau Public I created multi-page dashboards visualizations to highlight accident hotspots, maps, and collision type breakdowns.</p>
+            <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown" target="_blank">
+              <button class="button">Click to See</button>
+            </a>
+          </div>
+    </div>
+  </div>
+  </section>
+  </section>
 </body>
 </html>
