--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <!-- Navigation -->
-   
+
 <nav>
   <div class="nav__content">
     <div class="logo"><a href="#">Gina</a></div>
@@ -183,7 +183,7 @@
           <h4>September 2024 - February 2025</h4>
         </div>
         <div class="product_right">
-          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
+          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows.</p>
         </div>
       </div>
     </div>
@@ -229,7 +229,7 @@
           <div class="project">
             <img src="images/collision.png" alt="car">
             <h3>Seattle Collisions</h3>
-            <p>Using Tableau Public I created multi-page dashboards visualizations to highlight accident hotspots, maps, and collision type breakdowns.</p>
+            <p>Using Tableau Public I created multi-page dashboards visualizations to highlight accident hotspots and collision type breakdowns.</p>
             <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown" target="_blank">
               <button class="button">Click to See</button>
             </a>
