--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <h4>September 2024 - February 2025</h4>
         </div>
         <div class="product_right">
-          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows.</p>
+          <p>During my internship, I helped younger students gain access to free business entrepreneurship lessons and develop their professional skills by increasing training efficiency by 25% through creating multimedia content and optimizing data workflows...</p>
         </div>
       </div>
     </div>
