--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
   <section class="section" id="about">
     <div class="section__about">
       <h1>About</h1>
-      <h2>About Me</h2>
+      <h2>Biography</h2>
       <p>
         I am a recent graduate from the University of Washington, majoring in Informatics with a concentration in Data Science and Information Management.
-        I’m a versatile professional with experience in data research, user-centered design, coding, and project management.
+        I’m a versatile professional with experience in data research, coding, user-centered design, and project management.
         I enjoy turning complex data into actionable insights and creating intuitive, impactful solutions.
         With a balance of technical skills and project leadership, I thrive on building projects that are both functional and user-friendly.
       </p>
@@ -84,10 +84,10 @@
         <h2>Hobbies & Interests</h2>
         <p>In my free time I enjoy</p>
         <div class="mini_hobbies">
-          <p>Coffee Brewing <i class="fa fa-coffee"></i></p>
-          <p>Reading <i class="fa fa-book"></i></p>
-          <p>Hiking <i class="fa fa-hiking"></i></p>
-          <p>Cooking <i class="fas fa-utensils"></i></p>
+          <p><i class="fa fa-coffee"></i>Coffee Brewing </p>
+          <p><i class="fa fa-book"></i>Reading </p>
+          <p><i class="fa fa-hiking"></i>Hiking</p>
+          <p><i class="fas fa-utensils"></i>Cooking</p>
         </div>
       </div>
     </div>
@@ -205,7 +205,7 @@
           <div class="project">
             <img src="images/bot.png" alt="bot">
             <h3>LinkedIn Integrity</h3>
-            <p>Developed a Python-based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.</p>
+            <p>Used a python based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.</p>
             <a href="https://github.com/ginaxtran/Linked-In-Bots" target="_blank">
               <button class="button">Click to See</button>
             </a>
@@ -221,7 +221,9 @@
           <div class="project">
             <img src="images/scrapbook.png" alt="scrap">
             <h3>My Scrapbook</h3>
-            <p>In this project I designed a scrapbook layout to upload pictures on a post it note design using JavaScript, HTML, and CSS.</p>
+            <p>In ths project I used JavaScript, HTML, and CSS to create a scrapbook layout
+              to upload pictires on a post-it note design.
+            </p>
             <a href="https://github.com/INFO442-25WI-B/Girly_pop" target="_blank">
               <button class="button">Click to See</button>
             </a>
