--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
             <p>Google Analytics</p>
             <p>Excel</p>
             <p>Azure DevOps</p>
+            <p>AWS</p>
+            <p>Snowflake</p>
           </div>
         </div>
       </div>
