switch ember link

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           <img src="images/ember.png" alt="ember">
           <h3>EmberGuard</h3>
           <p>Built a secure and user-friendly app using JavaScript, HTML/CSS, and Python to provide marginalized communities with reliable wildfire information, managing development, Google authentication, deployment, and overall design.</p>
-          <a href="https://github.com/ginaxtran/EmberGuard" target="_blank">
+          <a href="https://ember-guard.vercel.app/" target="_blank">
             <button class="button">Click to See</button>
           </a>
         </div>
