--- a/index.html
+++ b/index.html
@@ -194,55 +194,112 @@
   </section>
 
   <!-- Portfolio Section -->
-  <section class="section" id="portfolio">
-    <div class="section__portfolio">
-      <h1>Portfolio</h1>
-      <div class="__portfolio">
-        <div class="project">
-          <img src="images/ember.png" alt="ember">
+<section class ="section" id="portfolio">
+  <div class ="section_portfolio">
+    <h1>Portfolio</h1>
+  </div>
+
+<!--The Little Prince-->
+  <div class = "container">
+    <div class="card">
+      <div class="half-card"></div>
+      <div class="card-content">
+        <h3>The Little Prince</h3>
+        <p>A Python project that analyzes emotional and structure using NLP from the The Little Prince's texts. </p>
+        <div class="mini-cards">
+          <div class="mini-cards">
+            <p>Python</p>
+            <p>NLP</p>
+            <p>Data visualizations</p>
+          </div>
+        </div>
+        <a href="https://github.com/ginaxtran/The-Little-Prince/blob/main/README.md">
+          <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
+        </a>
+      </div>
+    </div>
+
+  <!--EmberGuard-->
+      <div class="card">
+        <div class="half-card"></div>
+        <div class="card-content">
           <h3>EmberGuard</h3>
-          <p>Built a secure and user-friendly app using JavaScript, HTML/CSS, and Python to provide marginalized communities with reliable wildfire information, managing development, Google authentication, deployment, and overall design.</p>
-          <a href="https://ember-guard.vercel.app/" target="_blank">
-            <button class="button">Click to See</button>
+          <p>A full-stack web app providing wildfire risk predictions, emergency guidance, and shelter resources for marginalized communities.</p>
+          <div class="mini-cards">
+            <div class="mini-cards">
+              <p>JavaScript</p>
+              <p>HTML/CSS</p>
+              <p>Python</p>
+              <p>MongoDB</p>
+            </div>
+            <a href ="https://github.com/ginaxtran/EmberGuard">
+              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+  <!--LinkedIin Integrety-->
+      <div class="card">
+        <div class="half-card"></div>
+        <div class="card-content">
+          <h3>LinkedIn Integrity</h3>
+          <p>A machine learning project that detects bot-generated LinkedIn profiles to using models improve platform transparency and trust.</p>
+          <div class="mini-cards">
+            <div class="mini-cards">
+              <p>Python</p>
+              <p>Scikit-learn</p>
+              <p>Machine Learning</p>
+              <p>NLP</p>
+              <p>Data Cleaning & EDA</p>
+            </div>
+            <a href ="https://github.com/ginaxtran/Linked-In-Bots">
+              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+  <!--Seattle Animal Shelter-->
+      <div class="card">
+        <div class="half-card"></div>
+        <div class="card-content">
+          <h3>Seattle Animal Shelter</h3>
+          <p>A MySQL project that tracks adopters, breeds, and shelter locations to improve outreach, reduce inquiry times, and reveal adoption trends across different zip codes.</p>
+          <div class="mini-cards">
+            <div class="mini-cards">
+              <p>MySQL</p>
+              <p>Database Design</p>
+              <p>ERD Modeling</p>
+              <p>Data Management</p>
+            </div>
+            <a href="https://github.com/ginaxtran/animal-shelter">
+              <button type ="button" class ="button"><i class="fab fa-github"></i> Github</button>
+            </a>
+          </div>
+        </div>
+      </div>  
+
+    <!--Seattle Collisions-->
+    <div class="card">
+      <div class="half-card"></div>
+      <div class="card-content">
+        <h3>Seattle Collisions</h3>
+        <p>A multi-page dashboard visualizations project to highlight accident hotspots and collision type breakdowns.</p>
+        <div class="mini-cards">
+          <div class="mini-cards">
+            <p>Tableu Public</p>
+            <p>Data visualization</p>
+            <p>Dashboard Design</p>
+          </div>
+          <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown">
+            <button type ="button" class ="button"><i class="fas fa-bar-chart"></i> Chart</button>
           </a>
         </div>
-          <div class="project">
-            <img src="images/bot.png" alt="bot">
-            <h3>LinkedIn Integrity</h3>
-            <p>Used a python based bot detection model using Scikit-learn for sentiment analysis, cleaning LinkedIn profiles to enhance transparency by identifying likely fake accounts, reducing false profiles, and documenting findings in a research report.</p>
-            <a href="https://github.com/ginaxtran/Linked-In-Bots" target="_blank">
-              <button class="button">Click to See</button>
-            </a>
-          </div>
-          <div class="project">
-            <img src="images/animal_shelter.png" alt="animal">
-            <h3>Seattle Animal Shelter</h3>
-            <p>I used SQL and data modeling to build data pipelines and design a relational database that tracked adopters, breeds, and locations, which improved outreach efficiency, cut inquiry times, and revealed adoption trends across different zip codes.</p>
-            <a href="https://github.com/ginaxtran/animal-shelter" target="_blank">
-              <button class="button">Click to See</button>
-            </a>
-          </div>
-          <div class="project">
-            <img src="images/scrapbook.png" alt="scrap">
-            <h3>My Scrapbook</h3>
-            <p>In ths project I used JavaScript, HTML, and CSS to create a scrapbook layout
-              to upload pictires on a post-it note design.
-            </p>
-            <a href="https://github.com/INFO442-25WI-B/Girly_pop" target="_blank">
-              <button class="button">Click to See</button>
-            </a>
-          </div>
-          <div class="project">
-            <img src="images/collision.png" alt="car">
-            <h3>Seattle Collisions</h3>
-            <p>Using Tableau Public I created multi-page dashboards visualizations to highlight accident hotspots and collision type breakdowns.</p>
-            <a href="https://public.tableau.com/app/profile/gina4906/viz/SeattleCollisionsBaseProject_16675288541360/CollisionTypeWeatherBreakdown" target="_blank">
-              <button class="button">Click to See</button>
-            </a>
-          </div>
+      </div>
     </div>
   </div>
-  </section>
-  </section>
+</section>
+  
 </body>
 </html>
